corrected project text alignment for mobile

--- a/style/index.css
+++ b/style/index.css
@@ -228,6 +228,12 @@ footer {
     margin-bottom: 48px;
     }
 
+    .largeimage {
+        width: 100%;
+        margin: auto;
+        margin-bottom: 10%;
+        padding: 2.4%;
+        }
     /* projects mobile */
 
 #projectsgroup {
@@ -238,35 +244,39 @@ width: 100%;
 height:100%
 display: flex;
 flex-direction:column;
-justify-content: space-evenly;
+justify-content: space-between;
 align-items: center;
 order: -1;
 }
 
 #projectsgroup img {
     width: 100.0%;
-    margin-bottom: 20%
+    margin-bottom: 2%;
 }
 
 
 .grouptext {
     margin-right: 4.8%;
     margin-top: .5%;
+    margin-bottom: 8%;
     width: 90.0%;
     height: 10%;
     font-size: 2.4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    order: -1;
     }
 /* button and footer mobile */
 
     footer {
         display: flex;
         justify-content: center;
-        background-color: #1ebbd7;   
-        Height: 80px;
+        width: 100%;
+        height: 100px;
+        background-color: #1ebbd7;  
+        align-items: center; 
+
     }
 
     .button {
@@ -278,9 +288,10 @@ order: -1;
         font-size: 2.4rem;
         cursor: pointer;
         border-radius: 8px;
-        margin-top: 2.0%;
+        margin-top: 4.0%;
         margin-bottom: 2.0%;
         width: 70%;
+        height: 60%
         }
 
 }
